# idbvfs

./: .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  idbvfs.cpp  idbvfs.h
demo/: CMakeLists.txt  index.html  main.cpp
docs/: demo.js  demo.wasm  index.html
libs/sqlite-amalgamation/: CMakeLists.txt
src/: CMakeLists.txt  idbvfs.cpp  idbvfs.h
tests/: CMakeLists.txt  emscripten_polyfill.hpp  test.cpp
